--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<input type="text" id="n1">
 	</p>
 			<button onclick="cube()"> x^3 </button>
-			<button onclick="sine()"> sin </button>
+			<button onclick="sin()"> sin </button>
 			<button onclick="power_4()"> x^4</button>
 		</p>
 		<script type="text/javascript">
@@ -18,7 +18,7 @@
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 3);
 			}
-			function sine() {
+			function sin() {
 				var num = document.getElementById("n1");
 				num.value = Math.sin(num.value);
 			}
